# ChiakiLisp

./: .gitignore  .gitlab-ci.yml  .gitmodules  Makefile  README.md  build-cxx-runtime.sh  chiakilang  chiakilangc  chiakilangl  chiakilangr  chiakilisp.py  setup.cfg
algos/cl/: bubble-sort.cl
algos/py/: bubble_sort.py
chiakilisp/: __init__.py  cppenvironment.py  environment.py  lexer.py  parser.py  runtime.py  spec.py  utils.py
chiakilisp/corelib/: core.cl
chiakilisp/cxcompiler/: cgen.py  dictionary.py
chiakilisp/linter/: linter.py
chiakilisp/models/: __init__.py  expression.py  forward.py  literal.py  operand.py  token.py  value.py
examples/: factorial.cl  fujisaki-example.cl  fujisaki-markup.edn  funcional.cl  qt5-simple-app-window.cl
examples/ast-mode/: qt5-simple-app-window.cl
examples/cxx-mode/: qt5-simple-app-window.cl
examples/cxx-only/: qt5-simple-app-window.cl
examples/eval-mode/: qt5-simple-app-window.cl
libraries/: fujisaki.cl
runtime/: CMakeLists.txt  ChiakiLispRuntime.pro  chiakilisp.cpp  chiakilisp.hpp
tests/: corelib.cl
web/: index.html
