[options]
packages = find:
scripts =
    chiakilang
install_requires =
    hashedcolls ==1.0.2
python_requires = >=3.6

[options.package_data]
chiakilisp = corelib/core.cl

[metadata]
name = chiakilisp
version = 0.14.0
description = ChiakiLisp - yet another LISP syntax over Python 3
long_description = file: README.md
long_description_content_type = text/markdown
url = https://fulang.jedi2light.moe
author = @jedi2light
author_email = stoyan.minaev@gmail.com
maintainer = @jedi2light
maintainer_email = stoyan.minaev@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = GNU GPL v2
project_urls =
    Source = https://gitea.jedi2light.moe/jedi2light/chiakilisp.git/
    Bug Tracker = https://gitea.jedi2light.moe/jedi2light/chiakilisp/issues
    Documentation = https://gitea.jedi2light.moe/jedi2light/ChiakiLisp/wiki/What-is-ChiakiLisp
