[options]
packages = find:
scripts =
    chiakilang
install_requires =
    hashedcolls ==1.1.1
python_requires = >=3.6

[options.package_data]
chiakilisp = corelib/core.cl

[metadata]
name = chiakilisp
version = 1.4.0-rc-4
description = ChiakiLisp - Yet another LISP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://chiakilisp.jedi2light.moe
author = @jedi2light
author_email = jedi2light@jedi2light.moe
maintainer = @jedi2light
maintainer_email = jedi2light@jedi2light.moe
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license = WTFPL
project_urls =
    Web Site = https://chiakilisp.jedi2light.moe
    Source = https://gitlab.com/jedi2light/chiakilisp.git
    Bug Tracker = https://gitlab.com/jedi2light/chiakilisp/issues
